# Kadudu-coin

./: Cargo.toml  README.md  dfx.json  did.sh  package-lock.json  package.json
src/Kadudu_backend/: Cargo.toml
src/Kadudu_backend/src/: lib.rs  main.rs
src/Kadudu_frontend/: index.html  package.json
src/Kadudu_frontend/src/: App.js
