[package]
name = "Kadudu_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[main]
crate-type = ["cdylib"]

[dependencies]
ic-cdk-macros = "0.13.2"
candid = "0.10.8"
serde = "1.0"
ic-kit = "0.4.3"
ic-cdk = "0.13.1"
assert-panic = "1.0.1"
pocket-ic = "3.1.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
async-std = { version="1.10.0", features = ["attributes"] }
